# pbiadmin

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pbiadmin-design.md  pbiadmin-prd.md  profiles.toml.example  pyproject.toml
.agents/skills/az/: SKILL.md
.agents/skills/fabric-cli-core/: README.md  SKILL.md
.agents/skills/fabric-cli-core/references/: create-workspaces.md  fab-api.md  notebooks.md  querying-data.md  quickstart.md  reference.md  reports.md  semantic-models.md  workspaces.md
.agents/skills/fabric-cli-core/scripts/: health_check.py
.agents/skills/fabric-cli-powerbi/: README.md  SKILL.md
.agents/skills/fabric-cli-powerbi/references/: dax-queries.md  gateways.md  refresh.md  reports.md  semantic-models.md
.agents/skills/fabric-cli-powerbi/scripts/: list_refresh_history.py  rebind_report.py  refresh_model.py
.agents/skills/gh-cli/: SKILL.md
.agents/skills/setup-repo/: SKILL.md
.agents/skills/setup-repo/evals/: evals.json
.agents/skills/setup-repo/references/: gitignore-patterns.md
src/pbiadmin/cli/: dashboards.py  dataflows.py  datasets.py  main.py  migrate.py  paginated.py  permissions.py  reports.py  workspaces.py
src/pbiadmin/core/: auth.py  client.py  config.py  errors.py  fabric_client.py  output.py
src/pbiadmin/models/: dashboard.py  dataflow.py  dataset.py  report.py  workspace.py
src/pbiadmin/ops/: copy.py  delete.py  download.py  permissions.py  rebind.py  upload.py
src/pbiadmin/utils/: files.py  retry.py
tests/unit/: test_auth.py  test_cli.py  test_config.py  test_scaffold.py
