[project]
name = "pbiadmin"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "msal>=1.28",
    "requests>=2.31",
    "httpx>=0.27",
    "rich>=13",
    "toml>=0.10",
]

[project.optional-dependencies]
fabric = ["semantic-link"]
dev = ["pytest>=8", "pytest-mock>=3"]

[project.scripts]
pbiadmin = "pbiadmin.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: opt-in integration tests (require real credentials)"]
